<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="208dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView6"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/corporate_title_text"
                android:layout_toRightOf="@+id/corporate_title_text"
                android:gravity="center"
                android:text="TextView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="208dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView7"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/company_phone_number_text"
                android:layout_toRightOf="@+id/company_phone_number_text"
                android:gravity="center"
                android:text="TextView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="208dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView5"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/company_address_text"
                android:layout_toRightOf="@+id/company_address_text"
                android:gravity="center"
                android:text="TextView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="208dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView4"
                android:layout_marginStart="63dp"
                android:layout_marginLeft="63dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/company_email_text"
                android:layout_toRightOf="@+id/company_email_text"
                android:gravity="center"
                android:text="TextView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="208dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView3"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/company_name_text"
                android:layout_toRightOf="@+id/company_name_text"
                android:gravity="center"
                android:text="TextView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="208dp"
                android:layout_height="45dp"
                android:layout_below="@+id/localID_picture"
                android:layout_marginStart="65dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/user_name_text"
                android:layout_toRightOf="@+id/user_name_text"
                android:text="TextView"
                android:textSize="24sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/BC_Extended_Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/business_card_retracted_name_filler"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/localID_picture"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:layout_below="@id/BC_Extended_Header"
                tools:srcCompat="@tools:sample/backgrounds/scenic[16]" />


            <TextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/localID_picture"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="76dp"
                android:layout_marginLeft="76dp"
                android:layout_marginTop="26dp"
                android:text="@string/settings_user_name_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/company_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="39dp"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="35dp"
                android:text="@string/settings_company_name_text"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/company_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_name_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="77dp"
                android:layout_marginLeft="77dp"
                android:layout_marginTop="34dp"
                android:text="@string/settings_company_email_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/company_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_email_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="34dp"
                android:text="@string/settings_company_address_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/corporate_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_address_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="35dp"
                android:text="@string/settings_corporate_title_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/company_phone_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/corporate_title_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="35dp"
                android:text="@string/settings_phone_number_text"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>